re PR c++/57524 (ICE: in timevar_start, at timevar.c:343)

/cp
2014-01-24  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57524
	* name-lookup.c (push_using_directive): Use timevar_cond_start.

/testsuite
2014-01-24  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/57524
	* g++.dg/ext/timevar2.C: New.

From-SVN: r207047